Mantis

10.xx.2001  -   0.15.8

 * Fixed problem with $g_manage_cookie not being unset on logout
 * Fixed error in db_upgrade.sql ( nul; should be null; )
 * Fixed serveral localization errors
 * Added ALT fields to IMG tags
 * Added edit bugnote capability
 * Added Polish localization
 * Added Russian localization
 * Added umask call to prevent uploaded files from being executed remotely.
 * Updated Italian localization
 * Updated Korean localization
 * Updated Spanish localization
 * Modified User section so users with automatic access are listed
 * Modifed view all filters to consolidate functionality
 * Modifed view all filters to remember sort field and order
 * Removed email_bug_info_to_address()

08.28.2001  -   0.15.7

 * Fixed problem with account prefs not being updated.

08.27.2001  -   0.15.6

 * Fixed potential security hole with file uploads.  Users can potentially
   copy files on server to be available via the browser.  This requires
   PHP 3.0.17 and higher.  Please consider disabling file uploads to disk
   if you cannot upgrade versions.

08.26.2001  -   0.15.5

 * Fixed sort problems on view_all_bugs_page.php3
 * Fixed hide inactive problem in manage_page.php3
 * Fixed mysterious problem with global variables being set to ""
 * Fixed redirect problem when bug report not correctly filled out.
 * Added commented out examples for alternate links in css_inc.php
 * Added closing option tags.
 * Email prefs do not display when $g_enable_email_notification is 0.
 * Added Danish localization.
 * Fixed where updaters could assign to themselves.
 * Fixed where updaters could delete bugs.
 * Fixed where search result numbers correctly displayed.
 * Raised access required to ADMINISTRATOR for many manage_* pages.
 * Fixed error where default_profiles were not being picked up properly.
 * Fixed email subjects to unfilter url links properly.
 * Fixed simple search to correctly compare between bug_table and bug_text_table.