@@ -5,6 +5,8 @@ Mantis
  * Fixed problem with $g_manage_cookie not being unset on logout
  * Fixed error in db_upgrade.sql ( nul; should be null; )
  * Fixed serveral localization errors
+ * Fixed email to only send to devlopers and higher for a given project
+ * Fixed potential security hole with executable uploaded files
  * Added ALT fields to IMG tags
  * Added edit bugnote capability
  * Added Polish localization
